Bug 1147973 - Detailed disk cache hit rate telemetry is wrong, r=honzab